fixed issue with selection on House of Sverre when click away and collapsing

--- a/website/css/timeline/events.css
+++ b/website/css/timeline/events.css
@@ -14,6 +14,10 @@
     user-select: none;
 }
 
+.event-expanded {
+    z-index: var(--event-selected-zIndex);
+}
+
 .event-internal-container {
     /** this should be the same size as the internal value */
     display: inline;
